--- a/FRONTEND/css/template.css
+++ b/FRONTEND/css/template.css
@@ -3,8 +3,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "proxima-nova", sans-serif;
 }
 
 body {
@@ -57,6 +56,10 @@ h1 {
   flex-direction: column;
   align-items: center;
   text-align: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+  background-color: #fff; 
+  padding: 0.3rem; 
+  border-radius: 8px; 
 }
 
 .product-image {
