--- a/FRONTEND/css/templates/template1.css
+++ b/FRONTEND/css/templates/template1.css
@@ -321,3 +321,45 @@ textarea:focus {
     background-color: white;
   }
 }
+/* Container for textarea and button */
+.textarea-container {
+  position: relative;
+  
+#summary, .exp-description {
+    padding-bottom: 50px;
+  }}
+
+
+/* Button styles with positioning */
+.button-ai {
+  margin: 5px;
+  padding: 10px 20px;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 200% auto;
+  color: white;
+  border-radius: 10px;
+  display: block;
+  border: 0px;
+  font-weight: 700;
+  box-shadow: 0px 0px 14px -7px #007BFF;
+  background-image: linear-gradient(45deg, #0056D2 0%, #0096FF 51%, #0056D2 100%);
+  cursor: pointer;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+.button-ai:hover {
+  background-position: right center;
+  color: #fff;
+  text-decoration: none;
+}
+
+.button-ai:active {
+  transform: scale(0.95);
+}
